--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-	<string name="app_name" translatable="false">Doki</string>
+	<string name="app_name" translatable="false">Gafeland Manga</string>
 	<string name="local_storage">Local storage</string>
 	<string name="favourites">Favorites</string>
 	<string name="history">History</string>
